welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: Boolean does not take parameters
  while (! estSurBiscuit()()) {
                          ^